--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -71,7 +71,7 @@ Qiskit addons are a collection of research capabilities for utility-scale algori
 
 ## Benchmarking and the Benchpress package
 
-Using an open-source suite of over 1,000 benchmarking tests developed by leading universities, national labs, and researchers at IBM, Qiskit led the results in speed and quality for most test tasks. See the [IBM Quantum blog article](https://www.ibm.com/quantum/blog/qiskit-performance) for more details.
+Benchmarking is important for comparing the relative performance of quantum software across different stages of a development workflow. Benchmarking tests for quantum software might, for example, look at the speed and quality of building, manipulating, and transpiling circuits. IBM Quantum is committed to delivering the most performant SDK possible, and to that end, the Qiskit SDK is benchmarked using over 1,000 tests developed by leading universities, national labs, and researchers at IBM. The benchmarking suite used for these tests, named Benchpress, is now available as [an open-source package](https://github.com/qiskit/benchpress). You can now use the Benchpress package to perform your own analysis of quantum SDK performance.
 
 The benchmarking suite used for these tests, named Benchpress, is now available as [an open-source package](https://github.com/qiskit/benchpress). You can now use the Benchpress package to perform your own analysis of quantum SDK performance.
 
