--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -98,7 +98,7 @@ The following examples demonstrate how to transpile circuits using the Qiskit Tr
 
 Following are the most relevant limitations of the service:
 
-- The Qiskit Transpiler Service can transpile up to 1 million two-qubit gates in either `ai` mode `ai="true"`, `ai="false"` or `ai="auto"`.
+- The Qiskit Transpiler Service can transpile up to 1 million two-qubit gates in either `ai` mode `ai="true"`, `ai="false"`, or `ai="auto"`.
 - The maximum time allowed to run a transpilation process is 30 minutes.
 - You must retrieve the transpilation result from the service within 20 minutes after the transpilation process ends. After 20 minutes, your job is removed.
 - The maximum time a set of circuits can live in the internal queue while waiting to be transpiled is 120 minutes. After that time, if the job has not been transpiled, it is discarded.
