--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# IBM Circuit function\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "The IBM&reg; Circuit function takes [abstract PUBs](./primitive-input-output) as inputs, and returns mitigated expectation values as outputs. This circuit function includes an automated and customized pipeline to enable researchers to focus on algorithm and application discovery."
@@ -41,7 +45,7 @@
    "id": "f46c531c",
    "metadata": {},
    "source": [
-    "Authenticate using your [IBM Quantum&trade; Platform API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
+    "Authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
    ]
   },
   {
