--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# Introduction to Qiskit Functions\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "Qiskit Functions simplify and accelerate utility-scale algorithm discovery and application development, by abstracting away parts of the quantum software development workflow. In this way, Qiskit Functions free up time normally spent hand-writing code and fine-tuning experiments.\n",
     "\n",
     "![Overview of Qiskit Functions](/images/guides/functions/functions-overview.svg)\n",
@@ -33,7 +37,7 @@
     "\n",
     "`pip install qiskit-ibm-catalog`\n",
     "\n",
-    "Once installed, authenticate using your [IBM Quantum&trade; Platform API token](http://quantum.ibm.com/) as follows:"
+    "Once installed, authenticate using your [IBM Quantum Platform API token](http://quantum.ibm.com/) as follows:"
    ]
   },
   {
