--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -9,6 +9,10 @@
     "\n",
     "{/* cspell:ignore QSCI, CCSD, UCCSD, imags, CCGSD, CISD */}\n",
     "\n",
+    "<Admonition type=\"note\">\n",
+    "Qiskit Functions are an experimental feature available only to IBM Quantum&trade; Premium Plan users. They are in preview release status and subject to change.\n",
+    "</Admonition>\n",
+    "\n",
     "## Overview\n",
     "\n",
     "This function helps you solve the quantum chemistry ground state estimation problem by using one of two algorithms based on the [Quantum Selected Configuration Interaction (QSCI) algorithm](https://arxiv.org/pdf/2302.11320):\n",
@@ -42,7 +46,7 @@
    "source": [
     "## Get started\n",
     "\n",
-    "First, authenticate using your [IBM Quantum&trade; API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
+    "First, authenticate using your [IBM Quantum API token](http://quantum.ibm.com/), and select the Qiskit Function as follows:"
    ]
   },
   {
