--- a/docs/open-source/index.mdx
+++ b/docs/open-source/index.mdx
@@ -15,4 +15,4 @@ As quantum technology evolves, contributions from the open-source [Qiskit ecosys
 
 By joining the Qiskit community, you can participate in the development of quantum technologies.
 Whether you are a seasoned quantum programmer or taking the first step on your quantum journey, Qiskit provides the support and inspiration needed to push boundaries.
-We welcome all kinds of contributions, from code in pull requests to community support on [Slack](/support#qiskit), ensuring everyone can play a role in advancing quantum technology.
+We welcome all kinds of contributions, from code in pull requests to community support on [Slack](https://qisk.it/join-slack), ensuring everyone can play a role in advancing quantum technology.
