--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -6,27 +6,13 @@ description: How to find answers to questions or problems you encounter while us
 
 # Getting help
 
-## IBM Quantum Support
-
-Members of the IBM Quantum&trade; Network can reach out to IBM Quantum Support if they have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information.
-
-Pay-As-You-Go users can open a case in the IBM Cloud&reg; Support Center by following [this link](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field.
-
-## Qiskit SDK
-
-[GitHub link](https://github.com/Qiskit/qiskit)
-
-For help with Qiskit, access our Slack community: [Qiskit Slack](https://qisk.it/join-slack).
-
-## Qiskit Runtime
-
-[GitHub link](https://github.com/Qiskit/qiskit-ibm-runtime)
-
-- Join the qiskit-runtime channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).
-
-## Qiskit Transpiler Service
-
-[GitHub link](https://github.com/Qiskit/qiskit-ibm-transpiler)
+| | | |
+| --- | --- | -- |
+| IBM Quantum&trade; Network members | | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information. |
+| Pay-As-You-Go users | | Open a case in the IBM Cloud&reg; Support Center by following [this link](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
+| Qiskit SDK users | [GitHub link](https://github.com/Qiskit/qiskit)| For help with Qiskit, access our Slack community: [Qiskit Slack](https://qisk.it/join-slack).  |
+| Qiskit Runtime users  | [GitHub link](https://github.com/Qiskit/qiskit-ibm-runtime)| Join the qiskit-runtime channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).|
+| Qiskit Transpiler Service |  [GitHub link](https://github.com/Qiskit/qiskit-ibm-transpiler) | |
 
 ## Open-source governance
 
