move 'other discussions'

--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -1,28 +1,26 @@
 ---
-title: Getting help
+title: Support
 description: How to find answers to questions or problems you encounter while using IBM Quantum (Platform, or on IBM Cloud) or Qiskit Runtime
 
 ---
 
-# Getting help
+# Support
+
+## How to get help
 
 | | | |
 | --- | --- | --- |
 | IBM Quantum&trade; Network members | | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information. |
 | Pay-As-You-Go users | | Open a case in the IBM Cloud&reg; Support Center by following [this link](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
-| Qiskit SDK users | [GitHub link](https://github.com/Qiskit/qiskit)| For help with Qiskit, access our Slack community: [Qiskit Slack](https://qisk.it/join-slack).  |
-| Qiskit Runtime users  | [GitHub link](https://github.com/Qiskit/qiskit-ibm-runtime)| Join the qiskit-runtime channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).|
-| Qiskit Transpiler Service |  [GitHub link](https://github.com/Qiskit/qiskit-ibm-transpiler) | |
+| Qiskit SDK users | [GitHub repo](https://github.com/Qiskit/qiskit)| Access the Qiskit Slack community: [Qiskit Slack](https://qisk.it/join-slack).  |
+| Qiskit Runtime users  | [GitHub repo](https://github.com/Qiskit/qiskit-ibm-runtime)| Join the `qiskit-runtime` channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).|
+| Qiskit Transpiler Service users|  [GitHub repo](https://github.com/Qiskit/qiskit-ibm-transpiler) | |
+|Anyone||Discuss quantum information science and development with the larger quantum computing field on the [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.|
+|Questions specific to programming||Visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.|
 
 ## Open-source governance
 
 See the [Open-source resources](/open-source/) for details on contributing code to Qiskit. Information there includes the [code of conduct](/open-source/code-of-conduct), PDF license agreements for [individual](https://docs.quantum.ibm.com/open-source/qiskit-cla.pdf) and [corporate](https://docs.quantum.ibm.com/open-source/qiskit-corporate-cla.pdf) contributors, [version strategy](/open-source/qiskit-sdk-version-strategy), and the [contributor](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) and [maintainer](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md) guides.
-
-## Other discussions
-
-Discuss quantum information science and development with the larger quantum computing field on the [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.
-
-For questions specific to programming, visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.
 
 ## Frequently asked questions
 
