--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -62,10 +62,9 @@ To migrate from cloud simulators to local simulators, see the [migration guide](
 
 ### Why are the cloud simulators being retired?
 
-The cloud simulators are being retired for several reasons:
+The cloud simulators are being retired for several reasons.
 
-<details>
-<summary><a>Simulators have limitations</a></summary>
+#### Simulators have limitations
 
 Simulators can be useful, but they are too limited to use for research or experimentation:
 
@@ -73,10 +72,8 @@ Simulators can be useful, but they are too limited to use for research or experi
 
 - While some simulators offer noise models, it is a very hard problem to capture the entire dynamics of a real QPU. Quantum hardware offers the potential for researchers to confront the challenges inherent in quantum computers, such as noise, errors, and decoherence in a realistic testing environment.
 
-</details>
 
-<details>
-<summary><a>Using quantum hardware builds unique skills</a></summary>
+#### Using quantum hardware builds unique skills
 
 Interacting with quantum hardware grows skills and experience unattainable by only using simulators:
 
@@ -86,18 +83,13 @@ Interacting with quantum hardware grows skills and experience unattainable by on
 
 - Engaging with quantum hardware results in practical insights into the challenges and opportunities of quantum computing, enhancing developers' ability to drive innovation in the field.
 
-</details>
-
-<details>
-<summary><a>Algorithms should be adapted for quantum hardware</a></summary>
+#### Algorithms should be adapted for quantum hardware
 
 Successful quantum algorithms must be adapted to exploit the capabilities of quantum hardware, optimizing performance and efficiency.
 
 - Quantum hardware provides a more accurate representation of real-world QPUs than simulators.
 
 - Fine-tuning algorithms for quantum hardware involves adjusting ansatz, circuit implementations, parameters, and configuration to maximize performance.  This process is best achieved through direct experimentation with quantum hardware.
-
-</details>
 
 ### When should simulators be used?
 
