--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -38,7 +38,7 @@ An example of citing IBM Quantum Composer:
 
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
 
-## Why do I receive the error message `AttributeError: QuantumCircuit object has no attribute 'save_state'` when using `save_*`method on a circuit?
+## Why do I receive the error message "AttributeError: `QuantumCircuit` object has no attribute `save_state`" when using `save_*`method on a circuit?
   
 The `save_*` instructions are part of Qiskit Aer project,
 a high performance simulator for quantum circuits. These instructions do not
