--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -14,7 +14,7 @@ Cite Qiskit by using the included [BibTeX file](https://github.com/Qiskit/qiskit
 
 ## How do I cite an IBM Quantum computer in my research?
 
-For research papers, we encourage authors to acknowledge IBM Quantum using:
+For research papers, we encourage authors to acknowledge IBM Quantum&trade; by using:
 
 >    We acknowledge the use of IBM Quantum services for this work. The views expressed are those of the authors, and do not reflect the official policy or position of IBM or the IBM Quantum team.
 
