--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -22,7 +22,7 @@ Paper references should be cited as follows:
 
 > IBM Quantum. https://<span>quantum.ibm.com</span>/, 2021
 
-Quantum processing units in the paper should be referenced by their unique name (i.e., `ibmq_vigo`) and optionally
+Quantum processing units in the paper should be referenced by their unique name (for example, `ibmq_vigo`) and optionally
 adding the version (i.e., `ibmq_vigo` v1.0.2).  We also encourage referencing the processor.
 For example:
 
