--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -34,7 +34,7 @@ Example of citing an IBM Quantum program:
 
 ## How do I cite IBM Quantum Composer in my research?
 
-An example of citing IBM Quantum Composer:
+Example of citing IBM Quantum Composer:
 
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
 
