--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -44,7 +44,7 @@ The `save_*` instructions are part of Qiskit Aer project,
 a high performance simulator for quantum circuits. These instructions do not
 exist outside of Qiskit Aer and are added dynamically to the
 [QuantumCircuit](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) class by Qiskit Aer on import. To
-use these instructions you must first ensure that you have imported
+use these instructions you must first import
 `qiskit_aer` in your program before trying to call these methods. You
 can refer to [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for the details of these custom
 
