--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -45,7 +45,7 @@ a high performance simulator for quantum circuits. These instructions do not
 exist outside of Qiskit Aer and are added dynamically to the
 [QuantumCircuit](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) class by Qiskit Aer on import. To
 use these instructions you must first import
-`qiskit_aer` in your program before trying to call these methods. You
+`qiskit_aer` in your program. Refer
 can refer to [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for the details of these custom
 
 ## Why do my results from real devices differ from my results from the simulator?
