--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -46,7 +46,7 @@ exist outside of Qiskit Aer and are added dynamically to the
 [QuantumCircuit](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) class by Qiskit Aer on import. To
 use these instructions you must first import
 `qiskit_aer` in your program. Refer
-can refer to [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for the details of these custom
+to the [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for details.
 
 ## Why do my results from real devices differ from my results from the simulator?
 
