Edits from Eric

--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -15,6 +15,7 @@
    "id": "04b9204f-f058-433b-89f9-05df14645e27",
    "metadata": {},
    "source": [
+    "<span id=\"pub-overview\"></span>\n",
     "## Overview of PUBs\n",
     "\n",
     "When invoking a primitive's [`run()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.EstimatorV2#run) method, the main argument that is required is a `list` of one or more tuples -- one for each circuit being executed by the primitive. Each of these tuples is considered a PUB, and the required elements of each tuple in the list depends on the the primitive used. The data provided to these tuples can also be arranged in a variety of shapes to provide flexibility in a workload through broadcasting -- the rules of which are described in a [following section](#broadcasting-rules).\n",
