--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -53,31 +53,24 @@ This final step involves stitching the outputs from the prior step back together
 
 As the field moves from bespoke circuit construction to utility-scale workflows, the flexibility and ease with which Qiskit patterns allow users to compose the different steps of the pattern opens quantum computing to a wide variety of applications and techniques for easy use by quantum computational scientists.
 
-## Guides demonstrating the Qiskit patterns workflow
+## Guides demonstrating Qiskit patterns in action
 
-### Qiskit Serverless
+### Guides focused on one or more pattern steps
 
-With [Qiskit Serverless](./serverless), users can deploy workloads to cloud environments, configure them locally, and execute remotely. Premium users have access to quantum-classical compute resources to build and deploy their own workloads remotely. Instances of Qiskit Serverless can also be deployed to other cloud environments. Read the package's [documentation](https://qiskit.github.io/qiskit-serverless/index.html) for more information.
+* [Map problem to quantum circuits and operators](/guides/map-problem-to-circuits)
+* [Optimize for target hardware](/guides/optimize-for-hardware)
+* [Execute on target hardware](/guides/execute-on-hardware)
+* [Post-process results](/guides/post-process-results)
+
+### Guides focused on the full patterns workflow
 
 * [Overview of Qiskit Serverless](./serverless)
 * [Write your first Qiskit Serverless program](./serverless-first-program)
 * [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload)
 * [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources)
 * [Port code to Qiskit Serverless](./serverless-port-code)
-
-### Qiskit Functions
-
-[Qiskit Functions](/guides/functions) abstract away parts of the quantum software development workflow, and in the case of the application functions, they cover all the Qiskit patterns steps.
-
-- [Introduction to Qiskit Functions](/guides/functions)
-- Circuit functions:
-  - [IBM Circuit function](/guides/ibm-circuit-function)
-  - [Algorithmiq Tensor-network error mitigation](/guides/algorithmiq-tem)
-  - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
-  - [QEDMA QESEM](/guides/qedma-qesem)
-- Application functions:
-  - [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
-  - [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
+* [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
+* [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
 
 ## Next steps
 
