--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -56,7 +56,7 @@ For platforms without Qiskit preconfigured, the setup instructions are similar, 
 
 1. [Create a Google account.](https://support.google.com/accounts/answer/27441?hl)
 2. Go to the [Google Colab landing page](https://colab.research.google.com/) and sign in with your Google account.
-3. [Create a Colab notebook](http://colab.research.google.com/#create=true) and install Qiskit by running the following command:
+3. [Create a Colab notebook](https://colab.research.google.com/#create=true) and install Qiskit by running the following command:
    ```python
    %pip install qiskit qiskit-ibm-runtime
    ```
