--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -17,17 +17,18 @@ description: How to find answers to questions or problems you encounter while us
 |Anyone|Discuss quantum information science and development with the larger quantum computing field on the [Quantum Computing Stack Exchange](https://quantumcomputing.stackexchange.com/questions/) site. Be sure to read the ["How do I ask a good question?"](https://quantumcomputing.stackexchange.com/help/how-to-ask) guide, and make use of tags such as `qiskit`, `ibm-runtime`, and `ibm-quantum-services` for best results.|
 |Questions specific to programming|Visit [Stack Overflow](https://stackoverflow.com/) and use the tag `qiskit`.|
 
-## Find Qiskit on GitHub
+
+## Open-source governance
+
+See the [Open-source resources](/open-source/) for details on contributing code to Qiskit. Information there includes the [code of conduct](/open-source/code-of-conduct), PDF license agreements for [individual](https://docs.quantum.ibm.com/open-source/qiskit-cla.pdf) and [corporate](https://docs.quantum.ibm.com/open-source/qiskit-corporate-cla.pdf) contributors, [version strategy](/open-source/qiskit-sdk-version-strategy), and the [contributor](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) and [maintainer](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md) guides.
+
+### Find Qiskit on GitHub
 
 [Qiskit SDK](https://github.com/Qiskit/qiskit)
 
 [Qiskit Runtime](https://github.com/Qiskit/qiskit-ibm-runtime)
 
 [Qiskit Transpiler Service](https://github.com/Qiskit/qiskit-ibm-transpiler)
-
-## Open-source governance
-
-See the [Open-source resources](/open-source/) for details on contributing code to Qiskit. Information there includes the [code of conduct](/open-source/code-of-conduct), PDF license agreements for [individual](https://docs.quantum.ibm.com/open-source/qiskit-cla.pdf) and [corporate](https://docs.quantum.ibm.com/open-source/qiskit-corporate-cla.pdf) contributors, [version strategy](/open-source/qiskit-sdk-version-strategy), and the [contributor](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) and [maintainer](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md) guides.
 
 ## Frequently asked questions
 
