--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -60,6 +60,6 @@ To delete your account, go to your [account page](https://quantum.ibm.com/accoun
 
 See the [migration guide](/migration-guides/local-simulators) for details on the retirement of cloud simulators, and how to migrate to local simulators.
 
-## Didn't find an answer here?
+## Didn't find what you were looking for?
 
-Visit the [Support page](/support) for other ways to connect.
+Visit the [Support page](/support) for further guidance.
