--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -22,11 +22,13 @@ description: How to find answers to questions or problems you encounter while us
 
 See the [Open-source resources](/open-source/) for details on contributing code to Qiskit. Information there includes the [code of conduct](/open-source/code-of-conduct), PDF license agreements for [individual](https://docs.quantum.ibm.com/open-source/qiskit-cla.pdf) and [corporate](https://docs.quantum.ibm.com/open-source/qiskit-corporate-cla.pdf) contributors, [version strategy](/open-source/qiskit-sdk-version-strategy), and the [contributor](https://github.com/Qiskit/qiskit/blob/main/CONTRIBUTING.md) and [maintainer](https://github.com/Qiskit/qiskit/blob/main/MAINTAINING.md) guides.
 
-### Find Qiskit on GitHub
+To report bugs, make feature requests, and see what's coming in future releases, visit the individual GitHub repositories:
 
 [Qiskit SDK](https://github.com/Qiskit/qiskit)
 
 [Qiskit Runtime](https://github.com/Qiskit/qiskit-ibm-runtime)
+
+[Qiskit Serverless](https://github.com/Qiskit/qiskit-serverless)
 
 [Qiskit Transpiler Service](https://github.com/Qiskit/qiskit-ibm-transpiler)
 
