--- a/docs/api/qiskit/0.27/qiskit.aqua.components.optimizers.NFT.mdx
+++ b/docs/api/qiskit/0.27/qiskit.aqua.components.optimizers.NFT.mdx
@@ -26,15 +26,7 @@ python_api_name: qiskit.aqua.components.optimizers.NFT
 
   **Notes**
 
-  In this optimization method, the optimization function have to satisfy three conditions written in [\[1\]\_](#id5).
-
-  **References**
-
-  <span id="id2" />
-
-  **1**
-
-  K. M. Nakanishi, K. Fujii, and S. Todo. 2019. Sequential minimal optimization for quantum-classical hybrid algorithms. arXiv preprint arXiv:1903.12166.
+  In this optimization method, the optimization function have to satisfy three conditions written in K. M. Nakanishi, K. Fujii, and S. Todo. 2019. Sequential minimal optimization for quantum-classical hybrid algorithms. arXiv preprint arXiv:1903.12166.
 
   ### \_\_init\_\_
 
@@ -50,15 +42,7 @@ python_api_name: qiskit.aqua.components.optimizers.NFT
 
     **Notes**
 
-    In this optimization method, the optimization function have to satisfy three conditions written in [\[1\]\_](#id6).
-
-    **References**
-
-    <span id="id4" />
-
-    **1**
-
-    K. M. Nakanishi, K. Fujii, and S. Todo. 2019. Sequential minimal optimization for quantum-classical hybrid algorithms. arXiv preprint arXiv:1903.12166.
+    In this optimization method, the optimization function have to satisfy three conditions written in K. M. Nakanishi, K. Fujii, and S. Todo. 2019. Sequential minimal optimization for quantum-classical hybrid algorithms. arXiv preprint arXiv:1903.12166.
   </Function>
 
   ## Methods
