--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -5,7 +5,7 @@ description: Qiskit patterns are the broad steps employed when running a domain-
 
 # Introduction to Qiskit patterns
 
-A Qiskit pattern is a general framework for breaking down domain-specific problems and contextualizing required capabilities in stages. This allows for the seamless composability of new capabilities developed by IBM Quantum&trade; researchers (and others) and enables a future in which quantum computing tasks are performed by powerful heterogenous (CPU/GPU/QPU) computing infrastructure. Blocks or groups of blocks perform the steps of a pattern, with the Qiskit SDK providing an important foundational layer, supported by other tools or services developed by IBM Quantum or the quantum open-source community. Qiskit patterns allow domain experts to specify a problem and compose the tooling (blocks) that achieves a Qiskit pattern. That pattern can then be executed locally, through cloud services, or deployed with Quantum Serverless.
+A Qiskit pattern is a general framework for breaking down domain-specific problems and contextualizing required capabilities in stages. This allows for the seamless composability of new capabilities developed by IBM Quantum&trade; researchers (and others) and enables a future in which quantum computing tasks are performed by powerful heterogenous (CPU/GPU/QPU) computing infrastructure. Blocks or groups of blocks perform the steps of a pattern, with the Qiskit SDK providing an important foundational layer, supported by other tools or services developed by IBM Quantum or the quantum open-source community. Qiskit patterns allow domain experts to specify a problem and compose the tooling (blocks) that achieves a Qiskit pattern. That pattern can then be executed locally, through cloud services, or deployed with Qiskit Serverless.
 
 
 The four steps of a Qiskit pattern are as follows:
@@ -53,28 +53,27 @@ This final step involves stitching the outputs from the prior step back together
 
 As the field moves from bespoke circuit construction to utility-scale workflows, the flexibility and ease with which Qiskit patterns allow users to compose the different steps of the pattern opens quantum computing to a wide variety of applications and techniques for easy use by quantum computational scientists.
 
-## Guides demonstrating the Qiskit patterns workflow
+## Guides demonstrating Qiskit patterns in action
 
-### Qiskit Serverless
-* [Qiskit Serverless overview](./serverless)
-* [Write your first Qiskit Serverless program](./serverless-first-program)
-* [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload)
-* [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources)
-* [Port code to Qiskit Serverless](./serverless-port-code)
+### Guides focused on one or more pattern steps
 
-### Qiskit Functions
+* [Map problem to quantum circuits and operators](/guides/map-problem-to-circuits)
+* [Optimize for target hardware](/guides/optimize-for-hardware)
+* [Execute on target hardware](/guides/execute-on-hardware)
+* [Post-process results](/guides/post-process-results)
 
-[Qiskit Functions](/guides/functions) abstract away parts of the quantum software development workflow, and in the case of the application functions, they cover all the Qiskit patterns steps.
+### Guides focused on the full patterns workflow
 
-- [Introduction to Qiskit Functions](/guides/functions)
-- Circuit functions:
-  - [IBM Circuit function](/guides/ibm-circuit-function)
-  - [Algorithmiq Tensor-network error mitigation](/guides/algorithmiq-tem)
-  - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
-  - [QEDMA QESEM](/guides/qedma-qesem)
-- Application functions:
-  - [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
-  - [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
+- [Qiskit Serverless](/guides/serverless)
+  * [Overview of Qiskit Serverless](./serverless)
+  * [Write your first Qiskit Serverless program](./serverless-first-program)
+  * [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload)
+  * [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources)
+  * [Port code to Qiskit Serverless](./serverless-port-code)
+
+- [Qiskit Functions](/guides/functions)
+  * [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
+  * [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
 
 ## Next steps
 
