Document job limits

--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -59,6 +59,7 @@ expectation values of observables corresponding to physical quantities or cost f
 * [Processor types](./processor-types)
 * [QPU information](./qpu-information)
 * [Get QPU information with Qiskit](./get-qpu-information)
+* [Job limits](./job-limits)
 * [Native gates and operations](./native-gates)
 * [Retired QPUs](./retired-qpus)
 * [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
