--- a/docs/guides/primitives-examples.mdx
+++ b/docs/guides/primitives-examples.mdx
@@ -440,4 +440,5 @@ Output
     - Learn how to transpile locally in the [Transpile](./transpile/) section.
     - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.
     - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).
+    - Understand the [Job limits](/guides/job-limits) when sending a job to an IBM&reg; QPU.
 </Admonition>
