--- a/docs/guides/job-limits.mdx
+++ b/docs/guides/job-limits.mdx
@@ -23,7 +23,7 @@ For example, if you have a PUB with one circuit, observables with shape (1, 6), 
 <span id="per-qubit"></span>
 ## Maximum number of low-level instructions per qubit
 
-The system permits up to **32 million instructions per qubit**. This ensures that the user circuits fit within the control system's instruction memory.  The following table describes how the system translates instruction set architecture (ISA) circuit instructions to control system instructions when calculating this limit.
+The service permits up to **32 million instructions per qubit**. This ensures that the user circuits fit within the control system's instruction memory.  The following table describes how the system translates instruction set architecture (ISA) circuit instructions to control system instructions when calculating this limit.
 
 | Instruction | Count |
 |:-----------:|:-----:|
