--- a/docs/support.mdx
+++ b/docs/support.mdx
@@ -12,8 +12,7 @@ description: How to find answers to questions or problems you encounter while us
 | --- | --- |
 | IBM Quantum&trade; Network members  | Reach out to IBM Quantum Support if you have technical difficulties, questions, or concerns. Ask your administrator or IBM&reg; representative for IBM Quantum Support contact information. |
 | Pay-As-You-Go users  | Open a case in the IBM Cloud&reg; Support Center by filling out [this form](https://cloud.ibm.com/unifiedsupport/cases/form), and choosing 'Qiskit Runtime' from the Topic field. |
-| Qiskit SDK users | Access the Qiskit Slack community: [Qiskit Slack](https://qisk.it/join-slack).  |
-| Qiskit Runtime users | Join the `qiskit-runtime` channel within the [Qiskit Slack workspace](https://qisk.it/join-slack).|
+| Open Plan users | Access the [Qiskit Slack](https://qisk.it/join-slack) community, where you will find topical channels such as `qiskit-runtime`, `ibm-quantum-platform`, `qiskit-transpiler`, and more.  |
 
 ### Discuss and ask questions
 
@@ -37,7 +36,7 @@ To report bugs, make feature requests, and see what's coming in future releases,
 
 [Qiskit Transpiler Service](https://github.com/Qiskit/qiskit-ibm-transpiler)
 
-[Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) - Click on the Repo link for a specific package to go to its GitHub repository
+[Qiskit ecosystem](https://www.ibm.com/quantum/ecosystem) - Click on the "Repo" link for a specific package to go to its GitHub repository
 
 ## Frequently asked questions
 
